# litcal

./: .gitignore  README.md  Todo.txt  litcal.sqlite  todo.txt
cli/: main.js  package-lock.json  test.js
db/: litcaldb.c
etl/: .gitignore  README.md  eslint.config.js  go.mod  jsconfig.json  package-lock.json  package.json  tsconfig.json
etl/data/: LCAPI-USA-2024.json  LCAPI-USA-2024.transformed.json  LCAPI-USA-2025.json  LCAPI-USA-2025.json.transformed.json
etl/database/: 1.sql  2.sql  genesis.sql  litcal.sqlite
etl/dbmigrate/: backup.go  backup.js  backup_test.go  main.go  main.js  main_test.go  migrate.go  migrate.js  schemagen.go
etl/load/: load.go  load_test.go
etl/transform/: main.js  transform  types.ts
lib/: .gitignore  eslint.config.mjs  main.js  package-lock.json  package.json  test-data-2025.json  test.js
lib/script/: jlc-transform.js
liblitdb/: Makefile  README.md  errors.c  errors_test.c  liblitdb.c  liblitdb.h  liblitdb_test.c  main.c  private.h  private_test.h
liblitdb/data/: empty.test.sqlite
litcal-darwin/: .gitignore
litcal-darwin/Shared/: LitCalendarViewModel.swift  (+5 more)
litcal-ios/: README.md
litcal-ios-deprecated/: README.md
litdb/: .gitignore  CMakeLists.txt  Makefile  README.md  dates.c  dates.h  dates_test.c  errors.c  errors.h  errors_test.c  jextract.mjs  litcalTests.m  litdb.c  litdb.h  litdb_test  litdb_test.c  private.h  private_test.h
litdb-rs/: Cargo.toml  cbindgen.mjs  cbindgen.toml  my_header.h
litdb/test/: CMakeLists.txt  dates_test.c  dates_test.cpp  errors_test.c  errors_test.cpp  litdb_test.c  litdb_test.cpp
(+193 files in other folders)
